UI fix of the overflowing feature of the url to be shortened

--- a/styles.css
+++ b/styles.css
@@ -258,6 +258,7 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
+  word-wrap: break-word;
 }
 
 .shorten-link-container__link + .shorten-link-container__link {
@@ -265,6 +266,10 @@ header {
 }
 
 .shorten-link-container__text {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 100%;
+  white-space: nowrap;
   text-align: center;
   color: var(--very-dark-violet);
   text-decoration: none;
@@ -732,6 +737,10 @@ header {
     display: flex;
     flex-direction: row;
     align-items: center;
+  }
+
+  .shorten-link-container__text:nth-child(1) {
+    margin-right: 5rem;
   }
 
   .shorten-link-container__text--shorten {
